# space-invaders-emulator

./: .gitignore  8080.cpp  8080.hpp  CMakeLists.txt  README.md  build.sh  keys.cpp  keys.hpp  main.cpp  out  run.sh  screen.hpp
CPU/: 8080.cpp  8080.hpp  keys.hpp  screen.cpp  screen.hpp
debug/: logger.cpp
src/: CMakeLists.txt  main.cpp
src/CPU/: 8080.cpp  8080.hpp  CMakeLists.txt  Registers.cpp  Registers.hpp  Screen.cpp  Screen.hpp  headers.hpp  instruction_list.cpp  instruction_list.hpp  keys.cpp  keys.hpp  log.cpp  log.hpp
src/CPU/include/: logger.hpp
tests/: CMakeLists.txt  test_8080.cpp
